--- a/package.json
+++ b/package.json
@@ -181,7 +181,7 @@
   "devDependencies": {
     "typescript": "^2.0.3",
     "vscode": "^1.0.0",
-    "@types/node": "^6.0.40"
+    "@types/node": "latest"
   },
   "repository": {
     "type": "git",
