updated for publishing

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "vscode-quick-select",
-  "displayName": "Quick and Simple Text Selection",
+  "displayName": "Quick and Simple Text Selection (personal)",
   "description": "Jump to select between quote, brackets, tags, etc",
-  "version": "0.2.9",
-  "publisher": "dbankier",
+  "version": "0.2.10",
+  "publisher": "rahulsinha",
   "engines": {
     "vscode": "^1.0.3"
   },
